# jsume

./: .gitignore  Dockerfile  gunicorn_config.py  main.py  readme.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: run-tests.yaml
json_cv/: __main__.py
json_cv/app/endpoints/: cv_username.py
json_resume/: __main__.py  wsgi.py
json_resume/app/: app.py
json_resume/app/endpoints/: __init__.py  cv.py  cv_username.py  home.py  username.py
json_resume/app/templates/: cv.html  home.html
json_resume/logics/: github.py  make_pdf.py
json_resume_to_pdf/: app.py  github.py  make_pdf.py  validate_schema.py  wsgi.py
json_resume_to_pdf/app/: app.py  wsgi.py
json_resume_to_pdf/app/endpoints/: username.py
json_resume_to_pdf/endpoints/: username.py
json_resume_to_pdf/logics/: github.py  make_pdf.py  validate_schema.py
jsume/: app.py  github.py  make_pdf.py  validate_schema.py  wsgi.py
jsume/endpoints/: username.py
resources/: schema.json
templates/basic/: resume.css
tests/: Dockerfile  requirements.txt  test_github.py  test_validate_schema.py
tests/app/endpoints/: test_username.py
tests/endpoints/: test_username.py
tests/integration/: test_github.py
tests/logics/: test_github.py
tests/utils/code/: compare_pdf.py  make_output_cv.py  safe_get_gist.py
tests/utils/config/: policy.xml
tests/utils/files/: sample-theme.jinja
tests/utils/files/inputs/: sample-theme.jinja
themes/basic/: resume.html
