

[metadata]
name = json-resume
version = file: version.txt
author = Marco Pistilli
author_email = pistilli.mrc@gmail.com
url = https://github.com/marcopist/json-resume
description = "An API to turn your resume.json gist into a resume.pdf"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = COPYING
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.7
packages = json_resume
test_suite = tests
setup_requires =
    setuptools
install_requires =
    gunicorn
    addict
    Flask>=2.2.3, <3.0.0
    Jinja2>=3.1.2, <4.0.0
    pdfkit>=1.0.0, <1.1.0
    requests>=2.28.2, <3.0.0
    Werkzeug>=2.2.3, <3.0.0

[options.package_data]
{name} = py.typed, _version.txt, *.pyi

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[coverage:report]
show_missing = true
exclude_lines =
    pragma: no cover
    if False
    if __name__ == .__main__.:

[green]
file-pattern = test_*.py
verbose = 2
no-skip-report = true
quiet-stdout = true
run-coverage = true

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407   # Google conventions
    
[flake8]
max-line-length = 99
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/

[mypy]
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true